testsuite/tests/explicit-dicts/should_fail/all.T
test('ImportDictMissing', extra_files(['ExportClassOnly.hs']), multimod_compile, ['ImportDictMissing', '-v0'])
test('ImportMissingDictField', extra_files(['ExportDictOnly.hs']), multimod_compile, ['ImportMissingDictField', '-v0'])
test('Incoherence1', normal, compile_fail, ['-XDictionaryApplications'])
test('Incoherence2', normal, compile_fail, ['-XDictionaryApplications'])
test('Incoherence3', normal, compile_fail, ['-XDictionaryApplications'])
test('Incoherence4', normal, compile_fail, ['-XDictionaryApplications'])
test('Incoherence5', normal, compile_fail, ['-XDictionaryApplications'])
test('NoTyVar', normal, compile_fail, ['-XDictionaryApplications'])
test('NotATypeClassConstraint', normal, compile_fail, ['-XDictionaryApplications'])
test('OverrideSomeMethodFunction', extra_files(['SomeClass.hs', 'SomeMethodFunction.hs', 'SomeClassInstance.hs']), multimod_compile_fail, ['OverrideSomeMethodFunction', '-v0 -XDictionaryApplications'])
test('RoleNom', normal, compile_fail, ['-XDictionaryApplications'])
